# cppyythonizations

./: .gitignore  .gitmodules  COPYING  ChangeLog  LICENSE  MANIFEST.in  Makefile.am  README.md  conda-forge.yml  configure.ac  environment.yml  pyproject.toml  rever.xsh  setup.py
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_python_36_target_release.yaml  linux_python_36_target_style.yaml  linux_python_36_target_test.yaml  linux_python_37_target_release.yaml  linux_python_37_target_style.yaml  linux_python_37_target_test.yaml  linux_release.yaml  linux_style.yaml  linux_test36.yaml  linux_test37.yaml  osx_python_36_target_release.yaml  osx_python_36_target_style.yaml  osx_python_36_target_test.yaml  osx_python_37_target_release.yaml  osx_python_37_target_style.yaml  osx_python_37_target_test.yaml  osx_release.yaml  osx_test36.yaml  osx_test37.yaml  win_python_36_target_release.yaml  win_python_36_target_style.yaml  win_python_36_target_test.yaml  win_python_37_target_release.yaml  win_python_37_target_style.yaml  win_python_37_target_test.yaml
.github/workflows/: cancel.yml  conda.yml  test.yml
.scripts/: run_docker_build.sh  run_osx_build.sh
doc/news/: actions.rst  cancel.rst  cppyy-192.rst  forward.rst  manifest.rst  namespaces.rst  only-master.rst  pypi.rst  revert_type_erasure.rst  tribool-include.rst  typename-builtin.rst  unerase.rst
news/: rever.xsh  tuple.rst
recipe/: build.sh  conda_build_config.yaml  environment.sh  install.sh  meta.yaml
src/: .gitignore  MANIFEST.in.in  Makefile.am  setup.py.in
src/cppyythonizations/: __init__.py
src/cppyythonizations/boost/logic/: tribool.py
src/cppyythonizations/boost/type_erasure/: __init__.py
src/cppyythonizations/include/: cereal
src/cppyythonizations/operators/: README.md  arithmetic.py  order.py
src/cppyythonizations/pickling/: cereal.hpp  cereal.py
src/cppyythonizations/printing/: __init__.py
src/cppyythonizations/tuple/: __init__.py
src/cppyythonizations/util/: __init__.py
src/cppyythonizations/vector/: __init__.py
test/: .gitignore  Makefile.am  python-doctest.sh.in  test-env.sh.in
tools/rever/: autodist.xsh  autopypi.xsh  dist.xsh
