[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cppyythonizations"
authors = [
  {name = "Julian Rüth", email = "julian.rueth@fsfe.org"},
]
description = "A collection of Pythonizations for cppyy"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License"
]
version = "1.2.3"
dependencies = ["cppyy"]

[project.urls]
Homepage = "https://github.com/fatsurf/cppyythonizations"
Repository = "https://github.com/fatsurf/cppyythonizations.git"
Issues = "https://github.com/fatsurf/cppyythonizations/issues"
Changelog = "https://github.com/fatsurf/cppyythonizations/blob/master/ChangeLog"

[tool.setuptools.packages.find]
where = ["src"]
