[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cppyythonizations"
authors = [
  {name = "Julian Rüth", email = "julian.rueth@fsfe.org"},
]
description = "A collection of Pythonizations for cppyy"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License"
]
version = "1.2.5"
dependencies = ["cppyy"]

[project.urls]
Homepage = "https://github.com/flatsurf/cppyythonizations"
Repository = "https://github.com/flatsurf/cppyythonizations.git"
Issues = "https://github.com/flatsurf/cppyythonizations/issues"
Changelog = "https://github.com/flatsurf/cppyythonizations/blob/master/ChangeLog"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.environments]
python-39 = ["python-39"]
python-310 = ["python-310"]
python-311 = ["python-311"]
python-312 = ["python-312"]
dev = ["dev", "python-312"]

[tool.pixi.dependencies]
cppyy = "*"
gmp = "*"
libboost-headers = "*"
pytest = "*"
python = "*"
"ruamel.yaml" = "*"
setuptools = "*"

[tool.pixi.pypi-dependencies]
pytest-isolate = "*"

[tool.pixi.feature.dev.dependencies]
rever = "*"

[tool.pixi.feature.dev.target.linux.dependencies]
# A recent functioning valgrind is only available on conda-forge linux builds.
valgrind = "*"

[tool.pixi.feature.python-39.dependencies]
python = "3.9.*"

[tool.pixi.feature.python-310.dependencies]
python = "3.10.*"

[tool.pixi.feature.python-311.dependencies]
python = "3.11.*"

[tool.pixi.feature.python-312.dependencies]
python = "3.12.*"

[tool.pixi.tasks]
test = "pytest --isolate --doctest-modules -vv"

[tool.pixi.feature.dev.tasks]
test-valgrind = "PYTHONMALLOC=malloc valgrind --show-leak-kinds=definite --log-file=/tmp/valgrind-output python -m pytest -vv --doctest-modules --isolate --valgrind --valgrind-log=/tmp/valgrind-output"
